k8s/media/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
spec:
  selector:
    app: tautulli
  ports:
  - name: http
    port: 8181
    targetPort: 8181
